<resources>
    <string name="app_name">TheptaVACN</string>
    <string name="connection_test_pending">Check Connectivity</string>
    <string name="title_settings">Settings</string>
    <string name="title_logcat">LogCat</string>
    <string name="title_help">Help</string>
    <string name="title_pref_promotion">feedback</string>
    <string name="title_about">about</string>
    <string name="title_pref_opensource">open source</string>
    <string name="menu_item_add_config">Add config</string>
    <string name="title_server">Configuration file</string>
    <string name="server_lab_remarks">remarks</string>
    <string name="server_lab_address">address</string>
    <string name="server_lab_port">port</string>
    <string name="server_lab_id">id</string>
    <string name="server_lab_alterid">alterid</string>
    <string name="server_lab_filterApp">filter App(option def:None)</string>
    <string name="server_lab_NetWork_Type">NetWork Type</string>
    <string name="menu_item_del_config">Delete config</string>
    <string name="menu_item_save_config">Save config</string>
    <string name="del_config_comfirm">Confirm delete？</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string translatable="false" name="notify_channel_id">MyDefaultChannelID</string>
    <string translatable="false" name="notify_channel_name">MyDefaultChannelName</string>
    <string translatable="false" name="notify_channel_description">MyDefaultChannelDescription</string>

    <string name="title_pref_Debug_enabled">Enable Debug Log</string>
    <string name="summary_pref_Debug_enabled">Display current speed in the notification.\nNotification icon would change based on
        usage.</string>
    <string name="title_AppProxy_settings">Application Proxy Setting</string>
    <string name="title_pref_proxy_allow">addAllowedApplication</string>
    <string name="summary_pref_per_proxy_allow">white lis</string>
    <string name="title_pref_proxy_disall">addDisallowedApplication</string>
    <string name="summary_pref_per_proxy_disall">black list</string>
    <string name="title_pref_proxy_None">None</string>
    <string name="summary_pref_per_proxy_None">proxy all App</string>
    <string name="title_pref_allow_list">Allow Application List</string>
    <string name="title_pref_disall_list">DisAllow Application List</string>
    <string name="title_Tun_settings">Tun Setting</string>
    <string name="summary_pref_tun_addr">10.0.0.1</string>
    <string name="title_pref_tun_addr">Address</string>
    <string name="title_pref_tun_netmask">netmask</string>
    <string name="summary_pref_tun_netmask">255.255.255.252</string>
    <string name="title_pref_tun_mtu">MTU</string>
    <string name="summary_pref_tun_mtu">1400</string>

</resources>