<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/group_main">
        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_settings_white_24dp"
            android:title="@string/title_settings" />

    </group>

    <group android:id="@+id/group_id2">
        <item
            android:id="@+id/logcat"
            android:icon="@drawable/ic_logcat_white_24dp"
            android:title="@string/title_logcat" />

        <item
            android:id="@+id/feedback"
            android:icon="@drawable/ic_feedback_white_24dp"
            android:title="@string/title_pref_promotion" />
        <!-- place holder for version text at the bottom -->
        <item
            android:id="@+id/placeholder"
            android:enabled="false"
            android:title="" />
    </group>
</menu>
